# leptos_charming_example

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  package.json  tailwind.config.js
src/: graph.rs  graph2.rs  main.rs
