[package]
name = "letptos_charming_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
charming = { version = "0.3.1", features = ["wasm"] }
leptos = { version = "0.5.7", features = ["csr"] }
leptos_router = { version = "0.5.7", features = ["csr"] }
